# Switchboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY_NOTES.md  TODO.md  catalog-info.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection-setup.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: chaos.yml  ci-cd.yml  ci.yml  codeql-analysis.yml  docker-release.yml  media-artifacts.yml  newsletter.yml
.hypothesis/constants/: 03c578f4420174b2  115dd50699915abf  18209592011c9bd9  1977704d14a1e0ed  20d06aa85a83d50f  2bf659de589eea3b  31a1ea8b375d96e3  3bebf22566a0669c  4e1ae36d5a5f0927  6b39d76649119a9a  6f3b29ab242b6b07  7a71863ae455f49e  87ae5f9ecb39ce21  8a25df11662d2dc9  8c1863387d72de63  9467f00423bdb59e  b1819d310e297a61  b1c76b6f5fd5ce68  bafb709a919b083f  cfdcc0562f44a07d  da39a3ee5e6b4b0d  dfa814fb4867a01a  e194aeb14263cdab  e66df5e23081a953  f45a71c55357cbd3  faeea477c9d3fd76
.specstory/history/: 2025-10-22_13-24Z-commit-and-push-to-github-repo.md  2025-10-22_19-32Z-media-kit-development-and-automation-plan.md
.venv311/: pyvenv.cfg
apps/approvals_ui/: main.py
apps/demo_agent/: main.py
apps/mcp_server/: main.py
docs/: ARCHITECTURE.md  CHAOS.md  CONTRIBUTOR_QUICKSTART.md  EVALS.md  GETTING_STARTED.md  GROWTH_PLAYBOOK.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  NEWSLETTER_TEMPLATE.md  OBSERVABILITY_GRAFANA.md  OPERATIONS.md  OVERVIEW.md  RELEASE_NOTES_0.2.md  RESEARCH_POSITIONING.md  SECURITY.md  TALK_TRACK.md  TESTING.md  index.md
docs/labs/: change_request_lab.ipynb  change_request_lab.md
docs/media/: demo_instructions.md  switchboard_poster.md
evals/: README.md  runner.py
evals/datasets/: graph2eval_sample.jsonl
examples/: change_request.md  repo_hygiene.md
research/: aws_agentcore.html  backstage_templates.txt  graph2eval.txt  opa_best_practices.html  otel_metrics.txt  sigstore_best_practices.txt  sigstore_rekor.html  swe_bench_pro.txt  vertex_agent_engine.html
scripts/: demo_change_request.sh  init_db.py  report_coverage.sh  report_mutation.sh  run_grafana_stack.sh  run_tests_container.sh  seed_policies.py  setup_quickstart.sh  verify_audit.sh
switchboard/: __init__.py
(+61 files in other folders)
